--- a/ruleset/sca/rhel/9/cis_rhel9_linux.yml
+++ b/ruleset/sca/rhel/9/cis_rhel9_linux.yml
@@ -243,6 +243,7 @@ checks:
       - cis_csc_v8: ["3.3"]
       - cis_csc_v7: ["14.6"]
       - iso_27001-2013: ["A.9.1.1"]
+      - nist_sp_800-53: ["AC-5", "AC-6"]
       - cmmc_v2.0: ["AC.L1-3.1.1", "AC.L1-3.1.2", "AC.L2-3.1.5", "AC.L2-3.1.3", "MP.L2-3.8.2"]
       - hipaa: ["164.308(a)(3)(i)", "164.308(a)(3)(ii)(A)", "164.312(a)(1)"]
       - pci_dss_v3.2.1: ["7.1", "7.1.1", "7.1.2", "7.1.3"]
