Added UTs for flatcc helper function

--- a/src/unit_tests/shared/CMakeLists.txt
+++ b/src/unit_tests/shared/CMakeLists.txt
@@ -5,6 +5,9 @@ if(${TARGET} STREQUAL "winagent")
     link_directories(${SRC_FOLDER}/syscheckd/build/bin)
 endif(${TARGET} STREQUAL "winagent")
 
+#include flatcc definitions
+include_directories(${SRC_FOLDER}/external/flatcc/include/)
+
 # Tests list and flags
 list(APPEND shared_tests_names "test_list_op")
 set(LIST_OP_BASE_FLAGS "-Wl,--wrap,pthread_mutex_unlock -Wl,--wrap,pthread_mutex_lock \
@@ -316,6 +319,11 @@ endif()
 list(APPEND shared_tests_names "test_rwlock_op")
 list(APPEND shared_tests_flags "${DEBUG_OP_WRAPPERS}")
 
+if(${TARGET} STREQUAL "server")
+    list(APPEND shared_tests_names "test_flatcc_helpers")
+    list(APPEND shared_tests_flags "-Wl,--wrap,mdebug2 ${DEBUG_OP_WRAPPERS}")
+endif()
+
 # Compiling tests
 list(LENGTH shared_tests_names count)
 math(EXPR count "${count} - 1")
@@ -325,6 +333,14 @@ foreach(counter RANGE ${count})
 
     add_executable(${test_name} ${test_name}.c)
 
+    if(${test_name} STREQUAL "test_flatcc_helpers")
+        add_definitions(${test_name} -DPORTABLE_UNALIGNED_ACCESS=0)
+        find_library(FLATCC_LIBRARY flatccrt HINTS ${SRC_FOLDER}/external/flatcc/lib)
+        target_link_libraries(
+            ${test_name}
+            ${FLATCC_LIBRARY}
+        )
+    endif()
     if(${TARGET} STREQUAL "server")
         target_link_libraries(
             ${test_name}
