Add base test for policy handlers

--- a/src/engine/source/api/CMakeLists.txt
+++ b/src/engine/source/api/CMakeLists.txt
@@ -63,12 +63,13 @@ add_executable(api_utest
   # TODO update the tests when builder has interface
   # ${TEST_SRC_UNIT_DIR}/graph/handlers_test.cpp
   ${TEST_SRC_UNIT_DIR}/kvdb/kvdb_api_test.cpp
+  ${TEST_SRC_UNIT_DIR}/policy/handlers_test.cpp
   ${TEST_SRC_UNIT_DIR}/test/session_test.cpp
   ${TEST_SRC_UNIT_DIR}/adapter_test.cpp
   ${TEST_SRC_UNIT_DIR}/api_test.cpp
   ${TEST_SRC_UNIT_DIR}/registry_test.cpp
 )
 
-target_link_libraries(api_utest gtest_main base api schemf::mocks test_mocks store::mocks rbac::mocks)
+target_link_libraries(api_utest gtest_main base api schemf::mocks test_mocks store::mocks rbac::mocks policy::mocks)
 gtest_discover_tests(api_utest)
 endif(ENGINE_BUILD_TEST)
