--- a/src/engine/tools/vagrant/Vagrantfile
+++ b/src/engine/tools/vagrant/Vagrantfile
@@ -140,9 +140,20 @@ Vagrant.configure("2") do |config|
         engine-integration add -n wazuh integrations/windows/
         engine-integration add -n wazuh integrations/apache-http/
         engine-integration add -n wazuh integrations/suricata/
+        
         cd $HOME
-        echo "Creating default policy..."
-        $ENGINE_DIR/wazuh-engine catalog create policy < $ENGINE_SRC_DIR/ruleset/default-policy.yml
+        echo "Creating default policy 'policy/wazuh/0'..."
+        $ENGINE_DIR/wazuh-engine policy add -p policy/wazuh/0
+        $ENGINE_DIR/wazuh-engine policy parent-set decoder/integrations/0
+        $ENGINE_DIR/wazuh-engine policy parent-set -n wazuh decoder/integrations/0
+        $ENGINE_DIR/wazuh-engine policy asset-add -n system integration/wazuh-core/0
+        $ENGINE_DIR/wazuh-engine policy asset-add -n wazuh integration/syslog/0
+        $ENGINE_DIR/wazuh-engine policy asset-add -n wazuh integration/system/0
+        $ENGINE_DIR/wazuh-engine policy asset-add -n wazuh integration/windows/0
+        $ENGINE_DIR/wazuh-engine policy asset-add -n wazuh integration/apache-http/0
+        $ENGINE_DIR/wazuh-engine policy asset-add -n wazuh integration/suricata/0
+        echo "$($ENGINE_DIR/wazuh-engine policy get -n wazuh system)"
+        
         echo "Enabling default environment..."
         $ENGINE_DIR/wazuh-engine router add default filter/allow-all/0 255 policy/wazuh/0
         echo
