Adds UTs for the get_binary_path() function.

--- a/src/unit_tests/shared/CMakeLists.txt
+++ b/src/unit_tests/shared/CMakeLists.txt
@@ -254,6 +254,9 @@ list(APPEND shared_tests_flags "-Wl,--wrap,OS_BindUnixDomainWithPerms -Wl,--wrap
 
 list(APPEND shared_tests_names "test_remoted_op")
 list(APPEND shared_tests_flags "${DEBUG_OP_WRAPPERS}")
+
+list(APPEND shared_tests_names "test_binaries_op")
+list(APPEND shared_tests_flags "-Wl,--wrap,access ${DEBUG_OP_WRAPPERS}")
 endif()
 
 if(${TARGET} STREQUAL "server")
