--- a/src/engine/tools/vagrant/Vagrantfile
+++ b/src/engine/tools/vagrant/Vagrantfile
@@ -143,7 +143,7 @@ Vagrant.configure("2") do |config|
         
         cd $HOME
         echo "Creating default policy 'policy/wazuh/0'..."
-        $ENGINE_DIR/wazuh-engine policy add -p policy/wazuh/0
+        $ENGINE_DIR/wazuh-engine policy add -p policy/wazuh/0 -f
         $ENGINE_DIR/wazuh-engine policy parent-set decoder/integrations/0
         $ENGINE_DIR/wazuh-engine policy parent-set -n wazuh decoder/integrations/0
         $ENGINE_DIR/wazuh-engine policy asset-add -n system integration/wazuh-core/0
@@ -152,7 +152,7 @@ Vagrant.configure("2") do |config|
         $ENGINE_DIR/wazuh-engine policy asset-add -n wazuh integration/windows/0
         $ENGINE_DIR/wazuh-engine policy asset-add -n wazuh integration/apache-http/0
         $ENGINE_DIR/wazuh-engine policy asset-add -n wazuh integration/suricata/0
-        echo "$($ENGINE_DIR/wazuh-engine policy get -n wazuh system)"
+        echo "$($ENGINE_DIR/wazuh-engine policy get -n wazuh system user)"
         
         echo "Enabling default environment..."
         $ENGINE_DIR/wazuh-engine router add default filter/allow-all/0 255 policy/wazuh/0
