--- a/api/test/integration/test_sca_endpoints.tavern.yaml
+++ b/api/test/integration/test_sca_endpoints.tavern.yaml
@@ -513,8 +513,7 @@ stages:
 test_name: GET /sca/{agent_id}/checks/{policy_id}
 
 stages:
-  - &get_policy_id
-    name: Get policy ID
+  - name: Get policy ID
     request:
       verify: False
       url: "{protocol:s}://{host:s}:{port:d}/sca/001"
@@ -600,8 +599,7 @@ stages:
           expected_condition_command: data.affected_items[0].condition
           expected_command_command: data.affected_items[0].command
 
-  - &get_item_file_field
-    name: Get item with the file field (q="rules.type=file")
+  - name: Get item with the file field (q="rules.type=file")
     request:
       verify: False
       url: "{protocol:s}://{host:s}:{port:d}/sca/001/checks/{sca_policy_id:s}"
@@ -995,27 +993,25 @@ stages:
           failed_items: [ ]
           total_failed_items: 0
 
-#  - name: Get SCA checks filtering by remediation
-#    request:
-#      verify: False
-#      url: "{protocol:s}://{host:s}:{port:d}/sca/001/checks/{sca_policy_id:s}"
-#      method: GET
-#      headers:
-#        Authorization: "Bearer {test_login_token}"
-#      params:
-#        remediation: "{expected_remediation_file:s}"
-#    response:
-#      status_code: 200
-#      json:
-#        error: 0
-#        data:
-#          affected_items:
-#            - <<: *sca_check_result_001_file
-#          total_affected_items: !anyint
-#          failed_items: [ ]
-#          total_failed_items: 0
-
-  # select tests
+  - name: Get SCA checks filtering by remediation
+    request:
+      verify: False
+      url: "{protocol:s}://{host:s}:{port:d}/sca/001/checks/{sca_policy_id:s}"
+      method: GET
+      headers:
+        Authorization: "Bearer {test_login_token}"
+      params:
+        remediation: "{expected_remediation_file:s}"
+    response:
+      status_code: 200
+      json:
+        error: 0
+        data:
+          affected_items:
+            - <<: *sca_check_result_001_file
+          total_affected_items: !anyint
+          failed_items: [ ]
+          total_failed_items: 0
 
   - name: Get SCA checks filtering by rationale
     request:
@@ -1033,37 +1029,6 @@ stages:
         data:
           affected_items:
             - <<: *sca_check_result_001_command
-          total_affected_items: !anyint
-          failed_items: [ ]
-          total_failed_items: 0
-
----
-test_name: GET /sca/{agent_id}/checks/{policy_id}?remediation
-
-marks:
-  - xfail # Getting SCA check filtering by remediation fails with some values - https://github.com/wazuh/wazuh/issues/15465
-
-stages:
-  - *get_policy_id
-
-  - *get_item_file_field
-
-  - name: Get SCA checks filtering by remediation
-    request:
-      verify: False
-      url: "{protocol:s}://{host:s}:{port:d}/sca/001/checks/{sca_policy_id:s}"
-      method: GET
-      headers:
-        Authorization: "Bearer {test_login_token}"
-      params:
-        remediation: "{expected_remediation_file:s}"
-    response:
-      status_code: 200
-      json:
-        error: 0
-        data:
-          affected_items:
-            - <<: *sca_check_result_001_file
           total_affected_items: !anyint
           failed_items: [ ]
           total_failed_items: 0
